--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<audio controls autoplay>
-  <source src="music_MP3.mp3" type="audio/mpeg">
-</audio>
+<video width="320" height="240" controls>
+  <source src="sunset.mp4" type="video/mp4">
+</video>
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2fDzCWNS3ig?start=180"
 title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write;
